<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.georgealbert.queuemobileapplication.MainActivity"
    android:background="@drawable/gradientbackgroundcolor">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/useptextlogo"
        android:id="@+id/imageView"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:paddingTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/logoDescription"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_height="40dp"
        android:inputType="numberPassword"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="16sp"
        android:drawableLeft="@drawable/ic_action_password"
        android:background="#11000000"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginTop="11dp"
        android:layout_width="240dp" />

    <TextView
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:id="@+id/terminal4_transaction"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <TextView
        android:text="Register Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/terminal4_transaction"
        android:layout_alignBottom="@+id/terminal4_transaction"
        android:layout_alignRight="@+id/editText4"
        android:layout_alignEnd="@+id/editText4" />

    <android.support.v7.widget.CardView
        android:layout_marginTop="43dp"
        app:cardBackgroundColor="@color/colorGold"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_height="30dp"
        android:layout_width="250dp"
        android:id="@+id/logBtn"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/login"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <EditText
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/username"
        android:textSize="16sp"
        android:drawableLeft="@drawable/ic_action_username"
        android:background="#11000000"
        android:id="@+id/editText3"
        android:layout_width="240dp"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
