<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorwhitelow2"
    android:elevation="10dp"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            app:srcCompat="@drawable/ic_action_loggingout"
            android:layout_weight="1" />

        <TextView
            android:text="@string/logoutTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:gravity="center|left"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_height="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/logoutMessage"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">


        <Button
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:background="@drawable/button"
            android:id="@+id/no"
            android:backgroundTint="@android:color/holo_blue_light"
            android:layout_weight="1" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <Button
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/holo_blue_light"
            android:background="@drawable/button"
            android:layout_height="match_parent"
            android:id="@+id/yes"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>